--- a/style.css
+++ b/style.css
@@ -738,8 +738,8 @@ header.interior .interior-menu {
 
 /* Homepage Slides
 ================================================== */
-/* line 97, assets/sass/_layout.scss */
-.rslides, .homeslides {
+/* line 99, assets/sass/_layout.scss */
+.slider .rslides, .slider .homeslides {
   position: absolute;
   list-style: none;
   overflow: hidden;
@@ -750,9 +750,8 @@ header.interior .interior-menu {
   height: 800px;
   top: 0px;
 }
-
-/* line 109, assets/sass/_layout.scss */
-.rslides li, .homeslides li {
+/* line 111, assets/sass/_layout.scss */
+.slider .rslides li, .slider .homeslides li {
   -webkit-backface-visibility: hidden;
   position: absolute;
   display: none;
@@ -762,22 +761,20 @@ header.interior .interior-menu {
   z-index: 1;
 }
 @media only screen and (max-width: 1240px) {
-  /* line 109, assets/sass/_layout.scss */
-  .rslides li, .homeslides li {
+  /* line 111, assets/sass/_layout.scss */
+  .slider .rslides li, .slider .homeslides li {
     width: 1240px;
     height: 800px;
   }
 }
-
-/* line 123, assets/sass/_layout.scss */
-.rslides li:first-child, .homeslides li:first-child {
+/* line 125, assets/sass/_layout.scss */
+.slider .rslides li:first-child, .slider .homeslides li:first-child {
   position: relative;
   display: block;
   float: left;
 }
-
-/* line 129, assets/sass/_layout.scss */
-.rslides img, .homeslides img {
+/* line 131, assets/sass/_layout.scss */
+.slider .rslides img, .slider .homeslides img {
   display: block;
   height: auto;
   float: left;
@@ -785,41 +782,95 @@ header.interior .interior-menu {
   border: 0;
 }
 @media only screen and (max-width: 1240px) {
-  /* line 129, assets/sass/_layout.scss */
-  .rslides img, .homeslides img {
+  /* line 131, assets/sass/_layout.scss */
+  .slider .rslides img, .slider .homeslides img {
     width: 1240px;
     height: 800px;
   }
 }
+/* line 145, assets/sass/_layout.scss */
+.slider ul.rslides_tabs {
+  list-style-type: none;
+  width: 600px;
+  position: relative;
+  top: -55px;
+  margin: 0 auto;
+  z-index: 5;
+  text-align: center;
+}
+/* line 155, assets/sass/_layout.scss */
+.slider ul.rslides_tabs li {
+  display: inline-block;
+  margin-right: 20px;
+}
+/* line 161, assets/sass/_layout.scss */
+.slider ul.rslides_tabs li a {
+  color: black;
+}
+/* line 163, assets/sass/_layout.scss */
+.slider ul.rslides_tabs li a:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+/* line 166, assets/sass/_layout.scss */
+.slider ul.rslides_tabs li.rslides_here a {
+  color: #d1202f;
+}
+/* line 168, assets/sass/_layout.scss */
+.slider ul.rslides_tabs li.rslides_here a:hover, .slider ul.rslides_tabs li.rslides_here a:focus, .slider ul.rslides_tabs li.rslides_here a:active {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
+  opacity: 1;
+}
+/* line 173, assets/sass/_layout.scss */
+.slider a.rslides_nav {
+  color: black;
+  font-size: 40px;
+}
+/* line 175, assets/sass/_layout.scss */
+.slider a.rslides_nav:hover {
+  color: #d1202f;
+}
+/* line 177, assets/sass/_layout.scss */
+.slider a.rslides_nav.prev {
+  position: absolute;
+  top: 730px;
+  left: 10%;
+}
+/* line 178, assets/sass/_layout.scss */
+.slider a.rslides_nav.next {
+  position: absolute;
+  top: 730px;
+  left: 90%;
+}
 
 /* Homepage Styles
 ================================================== */
-/* line 147, assets/sass/_layout.scss */
+/* line 188, assets/sass/_layout.scss */
 .home-row {
   margin-top: 50px;
 }
 
-/* line 151, assets/sass/_layout.scss */
+/* line 192, assets/sass/_layout.scss */
 .home-box {
   padding: 30px 50px;
 }
-/* line 153, assets/sass/_layout.scss */
+/* line 194, assets/sass/_layout.scss */
 .home-box .service-row {
   width: 100%;
   margin-bottom: 10px;
 }
-/* line 157, assets/sass/_layout.scss */
+/* line 198, assets/sass/_layout.scss */
 .home-box .service-img {
   display: inline;
   padding-right: 30px;
 }
-/* line 161, assets/sass/_layout.scss */
+/* line 202, assets/sass/_layout.scss */
 .home-box .service {
   display: inline;
   position: relative;
   top: -20px;
 }
-/* line 165, assets/sass/_layout.scss */
+/* line 206, assets/sass/_layout.scss */
 .home-box .service a {
   color: white;
   font-family: "proxima-nova-condensed";
@@ -829,46 +880,46 @@ header.interior .interior-menu {
   letter-spacing: 0.05em;
   text-transform: uppercase;
 }
-/* line 174, assets/sass/_layout.scss */
+/* line 215, assets/sass/_layout.scss */
 .home-box .service a:hover {
   color: #d1202f;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
 
-/* line 179, assets/sass/_layout.scss */
+/* line 220, assets/sass/_layout.scss */
 .home-borders {
   margin-top: 60px;
   border-top: 20px solid black;
   border-bottom: 20px solid black;
 }
-/* line 183, assets/sass/_layout.scss */
+/* line 224, assets/sass/_layout.scss */
 .home-borders .home-borders-content {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-/* line 186, assets/sass/_layout.scss */
+/* line 227, assets/sass/_layout.scss */
 .home-borders .home-borders-content img {
   margin: 0;
   padding: 0;
 }
-/* line 187, assets/sass/_layout.scss */
+/* line 228, assets/sass/_layout.scss */
 .home-borders .home-borders-content p {
   margin: 0;
 }
 
-/* line 192, assets/sass/_layout.scss */
+/* line 233, assets/sass/_layout.scss */
 .home-connect {
   margin-top: 60px;
 }
-/* line 194, assets/sass/_layout.scss */
+/* line 235, assets/sass/_layout.scss */
 .home-connect .content-block-header {
   width: 100%;
   padding-top: 12px;
   padding-bottom: 12px;
   background: url("assets/img/stripes.png") repeat;
 }
-/* line 199, assets/sass/_layout.scss */
+/* line 240, assets/sass/_layout.scss */
 .home-connect .content-block-header h3 {
   background: black;
   margin: 0px 15px 0px 15px;
@@ -880,7 +931,7 @@ header.interior .interior-menu {
   line-height: 1.21;
   text-transform: uppercase;
 }
-/* line 212, assets/sass/_layout.scss */
+/* line 253, assets/sass/_layout.scss */
 .home-connect .social-icon {
   width: 90px;
   height: 90px;
@@ -889,22 +940,22 @@ header.interior .interior-menu {
   display: inline;
   float: left;
 }
-/* line 218, assets/sass/_layout.scss */
+/* line 259, assets/sass/_layout.scss */
 .home-connect .social-icon.first {
   margin-left: 0px;
 }
-/* line 219, assets/sass/_layout.scss */
+/* line 260, assets/sass/_layout.scss */
 .home-connect .social-icon a {
   color: white;
   font-size: 40px;
 }
-/* line 222, assets/sass/_layout.scss */
+/* line 263, assets/sass/_layout.scss */
 .home-connect .social-icon a:hover {
   color: #d1202f;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 226, assets/sass/_layout.scss */
+/* line 267, assets/sass/_layout.scss */
 .home-connect .social-icon a i {
   margin-top: 23px;
   margin-left: 26px;
@@ -912,7 +963,7 @@ header.interior .interior-menu {
 
 /* PAGE Styles
 ================================================== */
-/* line 242, assets/sass/_layout.scss */
+/* line 283, assets/sass/_layout.scss */
 .page-header {
   position: absolute;
   overflow: hidden;
@@ -924,13 +975,13 @@ header.interior .interior-menu {
   top: 0px;
 }
 @media only screen and (max-width: 1240px) {
-  /* line 242, assets/sass/_layout.scss */
+  /* line 283, assets/sass/_layout.scss */
   .page-header {
     width: 1240px;
     height: 800px;
   }
 }
-/* line 255, assets/sass/_layout.scss */
+/* line 296, assets/sass/_layout.scss */
 .page-header img {
   display: block;
   height: auto;
@@ -939,7 +990,7 @@ header.interior .interior-menu {
   border: 0;
 }
 
-/* line 266, assets/sass/_layout.scss */
+/* line 307, assets/sass/_layout.scss */
 .page-title {
   width: 100%;
   padding-top: 18px;
@@ -950,7 +1001,7 @@ header.interior .interior-menu {
   height: 54px;
   z-index: -1;
 }
-/* line 275, assets/sass/_layout.scss */
+/* line 316, assets/sass/_layout.scss */
 .page-title h1 {
   background: black;
   margin: 0px 0px 0px 0px;
@@ -964,7 +1015,7 @@ header.interior .interior-menu {
   text-align: center;
 }
 
-/* line 289, assets/sass/_layout.scss */
+/* line 330, assets/sass/_layout.scss */
 .page-content {
   width: 100%;
   position: relative;
@@ -972,126 +1023,126 @@ header.interior .interior-menu {
   z-index: 1;
   margin-bottom: -330px;
 }
-/* line 296, assets/sass/_layout.scss */
+/* line 337, assets/sass/_layout.scss */
 .page-content .breadcrumbs {
   margin: 10px 0 50px 0;
   text-align: right;
   font-size: 12px;
 }
-/* line 301, assets/sass/_layout.scss */
+/* line 342, assets/sass/_layout.scss */
 .page-content .breadcrumbs a {
   color: black;
 }
-/* line 303, assets/sass/_layout.scss */
+/* line 344, assets/sass/_layout.scss */
 .page-content .breadcrumbs a:hover {
   color: #d1202f;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 309, assets/sass/_layout.scss */
+/* line 350, assets/sass/_layout.scss */
 .page-content .breadcrumbs a:first-child {
   font-size: 14px;
   text-transform: uppercase;
   font-weight: bold;
 }
-/* line 314, assets/sass/_layout.scss */
+/* line 355, assets/sass/_layout.scss */
 .page-content .breadcrumbs a:nth-child(3) {
   font-size: 12px;
   text-transform: uppercase;
 }
-/* line 319, assets/sass/_layout.scss */
+/* line 360, assets/sass/_layout.scss */
 .page-content .breadcrumbs a:nth-child(5) {
   font-size: 11px;
   text-transform: none;
 }
-/* line 324, assets/sass/_layout.scss */
+/* line 365, assets/sass/_layout.scss */
 .page-content .breadcrumbs i {
   padding: 0 3px 0 3px;
 }
-/* line 330, assets/sass/_layout.scss */
+/* line 371, assets/sass/_layout.scss */
 .page-content ul.subnav {
   list-style-type: none;
   margin: 0;
 }
-/* line 333, assets/sass/_layout.scss */
+/* line 374, assets/sass/_layout.scss */
 .page-content ul.subnav li {
   text-transform: uppercase;
   font-weight: bold;
   margin: 3px 0 2px 0;
 }
-/* line 338, assets/sass/_layout.scss */
+/* line 379, assets/sass/_layout.scss */
 .page-content ul.subnav li a {
   padding: 0 0 0 6px;
   color: black;
 }
-/* line 341, assets/sass/_layout.scss */
+/* line 382, assets/sass/_layout.scss */
 .page-content ul.subnav li a:hover {
   color: #d1202f;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 346, assets/sass/_layout.scss */
+/* line 387, assets/sass/_layout.scss */
 .page-content ul.subnav li ul {
   margin-left: 18px;
   list-style-type: none;
 }
-/* line 349, assets/sass/_layout.scss */
+/* line 390, assets/sass/_layout.scss */
 .page-content ul.subnav li ul li {
   text-transform: none;
 }
-/* line 351, assets/sass/_layout.scss */
+/* line 392, assets/sass/_layout.scss */
 .page-content ul.subnav li ul li.current_page_item {
   background-color: black;
 }
-/* line 353, assets/sass/_layout.scss */
+/* line 394, assets/sass/_layout.scss */
 .page-content ul.subnav li ul li.current_page_item a {
   color: white;
 }
-/* line 355, assets/sass/_layout.scss */
+/* line 396, assets/sass/_layout.scss */
 .page-content ul.subnav li ul li.current_page_item a:hover {
   color: #d1202f;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 365, assets/sass/_layout.scss */
+/* line 406, assets/sass/_layout.scss */
 .page-content ul.subnav > li.current_page_item {
   background-color: black;
 }
-/* line 367, assets/sass/_layout.scss */
+/* line 408, assets/sass/_layout.scss */
 .page-content ul.subnav > li.current_page_item a {
   color: white;
 }
-/* line 369, assets/sass/_layout.scss */
+/* line 410, assets/sass/_layout.scss */
 .page-content ul.subnav > li.current_page_item a:hover {
   color: #d1202f;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 374, assets/sass/_layout.scss */
+/* line 415, assets/sass/_layout.scss */
 .page-content ul.subnav > li.current_page_item ul {
   margin-left: 0px;
   background-color: white;
 }
-/* line 377, assets/sass/_layout.scss */
+/* line 418, assets/sass/_layout.scss */
 .page-content ul.subnav > li.current_page_item ul li a {
   color: black;
   margin-left: 18px;
 }
-/* line 380, assets/sass/_layout.scss */
+/* line 421, assets/sass/_layout.scss */
 .page-content ul.subnav > li.current_page_item ul li a:hover {
   color: #d1202f;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
 
-/* PAGE Styles
+/* PAGE Slider
 ================================================== */
-/* line 400, assets/sass/_layout.scss */
+/* line 441, assets/sass/_layout.scss */
 .page-slider {
   margin-bottom: -40px;
 }
 
-/* line 404, assets/sass/_layout.scss */
+/* line 445, assets/sass/_layout.scss */
 .page-slides {
   position: relative;
   list-style: none;
@@ -1103,7 +1154,7 @@ header.interior .interior-menu {
   height: 400px;
 }
 
-/* line 416, assets/sass/_layout.scss */
+/* line 457, assets/sass/_layout.scss */
 .page-slides li {
   -webkit-backface-visibility: hidden;
   position: absolute;
@@ -1114,21 +1165,21 @@ header.interior .interior-menu {
   z-index: 1;
 }
 @media only screen and (max-width: 1240px) {
-  /* line 416, assets/sass/_layout.scss */
+  /* line 457, assets/sass/_layout.scss */
   .page-slides li {
     width: 1240px;
     height: 800px;
   }
 }
 
-/* line 430, assets/sass/_layout.scss */
+/* line 471, assets/sass/_layout.scss */
 .page-slides li:first-child {
   position: relative;
   display: block;
   float: left;
 }
 
-/* line 436, assets/sass/_layout.scss */
+/* line 477, assets/sass/_layout.scss */
 .page-slides img {
   display: block;
   height: auto;
@@ -1137,7 +1188,7 @@ header.interior .interior-menu {
   border: 0;
 }
 
-/* line 444, assets/sass/_layout.scss */
+/* line 485, assets/sass/_layout.scss */
 ul.rslides_tabs {
   list-style-type: none;
   width: 600px;
@@ -1145,57 +1196,57 @@ ul.rslides_tabs {
   top: -85px;
   text-align: center;
 }
-/* line 452, assets/sass/_layout.scss */
+/* line 493, assets/sass/_layout.scss */
 ul.rslides_tabs li {
   display: inline-block;
   margin-right: 20px;
 }
-/* line 458, assets/sass/_layout.scss */
+/* line 499, assets/sass/_layout.scss */
 ul.rslides_tabs li a {
   color: black;
 }
-/* line 460, assets/sass/_layout.scss */
+/* line 501, assets/sass/_layout.scss */
 ul.rslides_tabs li a:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
-/* line 463, assets/sass/_layout.scss */
+/* line 504, assets/sass/_layout.scss */
 ul.rslides_tabs li.rslides_here a {
   color: #d1202f;
 }
-/* line 465, assets/sass/_layout.scss */
+/* line 506, assets/sass/_layout.scss */
 ul.rslides_tabs li.rslides_here a:hover, ul.rslides_tabs li.rslides_here a:focus, ul.rslides_tabs li.rslides_here a:active {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
 }
 
-/* line 470, assets/sass/_layout.scss */
+/* line 511, assets/sass/_layout.scss */
 a.rslides_nav {
   color: black;
   font-size: 40px;
 }
-/* line 472, assets/sass/_layout.scss */
+/* line 513, assets/sass/_layout.scss */
 a.rslides_nav:hover {
   color: #d1202f;
 }
-/* line 474, assets/sass/_layout.scss */
+/* line 515, assets/sass/_layout.scss */
 a.rslides_nav.prev {
   position: relative;
   top: -220px;
   left: 20px;
 }
-/* line 475, assets/sass/_layout.scss */
+/* line 516, assets/sass/_layout.scss */
 a.rslides_nav.next {
   position: relative;
   top: -220px;
   left: 600px;
 }
 
-/* line 478, assets/sass/_layout.scss */
+/* line 519, assets/sass/_layout.scss */
 .landing-block {
   margin-bottom: 25px;
 }
-/* line 480, assets/sass/_layout.scss */
+/* line 521, assets/sass/_layout.scss */
 .landing-block h3.landing-subtitle {
   font-weight: bold;
   font-size: 14px;
@@ -1209,28 +1260,28 @@ a.rslides_nav.next {
 
 /* FOOTER Styles
 ================================================== */
-/* line 503, assets/sass/_layout.scss */
+/* line 544, assets/sass/_layout.scss */
 .instagram {
   margin-top: 55px;
   margin-bottom: 30px;
 }
-/* line 506, assets/sass/_layout.scss */
+/* line 547, assets/sass/_layout.scss */
 .instagram h6 {
   padding-bottom: 16px;
 }
-/* line 507, assets/sass/_layout.scss */
+/* line 548, assets/sass/_layout.scss */
 .instagram img {
   width: 145px;
   margin-bottom: 30px;
 }
 
-/* line 511, assets/sass/_layout.scss */
+/* line 552, assets/sass/_layout.scss */
 footer {
   width: 100%;
   background: black;
   padding: 30px 0 20px 0;
 }
-/* line 518, assets/sass/_layout.scss */
+/* line 559, assets/sass/_layout.scss */
 footer .footer-menu ul > li {
   display: inline;
   float: left;
@@ -1241,21 +1292,21 @@ footer .footer-menu ul > li {
   letter-spacing: 0.05em;
   text-transform: uppercase;
 }
-/* line 527, assets/sass/_layout.scss */
+/* line 568, assets/sass/_layout.scss */
 footer .footer-menu ul > li a {
   color: white;
 }
-/* line 529, assets/sass/_layout.scss */
+/* line 570, assets/sass/_layout.scss */
 footer .footer-menu ul > li a:hover {
   color: #d1202f;
 }
-/* line 532, assets/sass/_layout.scss */
+/* line 573, assets/sass/_layout.scss */
 footer .footer-menu ul > li ul {
   width: 120px;
   padding-left: 0;
   margin: 0;
 }
-/* line 536, assets/sass/_layout.scss */
+/* line 577, assets/sass/_layout.scss */
 footer .footer-menu ul > li ul li {
   display: block;
   width: 100%;
@@ -1263,28 +1314,28 @@ footer .footer-menu ul > li ul li {
   padding: 5px 0px 0px 0px;
   text-transform: none;
 }
-/* line 549, assets/sass/_layout.scss */
+/* line 590, assets/sass/_layout.scss */
 footer .credits {
   font-size: 11px;
   line-height: 1.636;
   letter-spacing: 0.05em;
   color: white;
 }
-/* line 555, assets/sass/_layout.scss */
+/* line 596, assets/sass/_layout.scss */
 footer .footer-social {
   padding-bottom: 19px;
 }
-/* line 556, assets/sass/_layout.scss */
+/* line 597, assets/sass/_layout.scss */
 footer .footer-social a {
   color: white;
   padding-left: 8px;
   font-size: 14px;
 }
-/* line 558, assets/sass/_layout.scss */
+/* line 599, assets/sass/_layout.scss */
 footer .footer-social a:hover {
   color: #d1202f;
 }
-/* line 564, assets/sass/_layout.scss */
+/* line 605, assets/sass/_layout.scss */
 footer span.hayworth {
   position: relative;
   top: 95px;
